gb200-fp4-decode-bench/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wide-ep-llm-d-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: wide-ep-llm-d-inference-gateway
  rules:
  - backendRefs:
    - group: inference.networking.k8s.io
      kind: InferencePool
      name: wide-ep-llm-d-infpool
      port: 8000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /v1/
    timeouts:
      backendRequest: "0s"
      request: "0s"
